--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.10",
     "@types/react": "17.0.11",
     "typescript": "4.3.2"
   }
